# AI-Document-Generator

./: .gitignore  LICENSE.md  README.md  ai-project-docs-generator.jsx
.github/workflows/: release.yml
AI-Template/: .env.example  index.html  package-lock.json  package.json  vite.config.js
AI-Template/src/: App.jsx  docs.js  index.css  instrument.js  main.jsx
AI-Template/src-tauri/: Cargo.toml  tauri.conf.json
AI-Template/src-tauri/capabilities/: default.json
AI-Template/src-tauri/icons/: icon.icns
AI-Template/src/components/: AutosaveIndicator.jsx  Sidebar.jsx
AI-Template/src/components/inputs/: ListInput.jsx
AI-Template/src/hooks/: useDebounce.js
AI-Template/src/layouts/: ComposeDirection.jsx  ManuscriptDirection.jsx  TerminalDirection.jsx
AI-Template/src/utils/: ui.js
examples/: 01_prd.md  02_system_design.md  03_uiux_wireframes.md  04_feature_breakdown.md  05_master_prompt.md  06_data_model.md  07_security.md  08_testing_strategy.md  09_deployment.md  10_agents_md.md
