[package]
name = "ai-docs-generator"
version = "1.1.0"
description = "AI Project Document Templates"
authors = ["D4rkwolf Studios"]
edition = "2021"

[lib]
name = "ai_docs_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
